# open-law-lens

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.pi/: settings.json
open_law_lens/: __init__.py  agent.py  app.py  authority_resolver.py  cache.py  case_suggestions.py  case_titles.py  citation_links.py  citation_model.py  cli.py  cli_commands.py  client.py  config.py  current_case.py  dbus_commands.py  external_import.py  fact_patterns.py  import_text.py  launch_request.py  library.py  opinion_formatting.py  pi_runtime.py  prior_briefs.py  quality.py  reader_highlights.py  rules.py  scholar_search.py  slip_opinions.py  speech.py  statutes.py  storage.py  text_formatting.py  text_search.py  web_import.py
scripts/: open-law-lens-agent-vte.sh  open-law-lens-codex-agent-pty.py  open-law-lens-codex-agent-vte.sh
tests/: test_agent.py  test_agent_vte_wrapper.py  test_app_reader_payload.py  test_authority_resolver.py  test_cache.py  test_case_suggestions.py  test_citation_links.py  test_citation_model.py  test_cli_commands.py  test_client.py  test_config.py  test_current_case.py  test_dbus_commands.py  test_external_import.py  test_fact_patterns.py  test_launch_request.py  test_library.py  test_opinion_formatting.py  test_pi_model_settings_ui.py  test_pi_runtime.py  test_prior_brief_app.py  test_prior_brief_cache.py  test_prior_briefs.py  test_quality.py  test_reader_highlights.py  test_rules.py  test_scholar_search.py  test_slip_opinions.py  test_speech.py  test_statutes.py  test_storage.py  test_text_formatting.py  test_text_search.py  test_web_import.py
(+10 files in other folders)
