[project]
name = "open-law-lens"
version = "0.1.0"
description = "Minimal CourtListener citation lookup app with a GTK reader and embedded Codex terminal."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygobject>=3.54.5",
    "trafilatura>=2.0.0",
]

[project.scripts]
open-law-lens = "open_law_lens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
